# GATech-6122

./: .gitignore
FinalProject/: CMakeLists.txt
FinalProject/src/: Mytest.txt  complex.cc  complex.cu  fft2d.cu
P33/: Tower256fft.txt  res.txt
P3_reference/: fft2D.cc
Qiao/src/: heat1D
SE2_reference/: pseudo.cc
SE2_reference/Qiao/src/: main.cpp  main2.cpp
heat2D3D/: heat2D3D.sln
heat2D3D/heat2D3D/: sample3d.conf.bak
heat2D3D/heat2D3D/Debug/: heat2D3D.cu.cache
heat2D3D/heat2D3D/Debug/heat2D3D.tlog/: heat2D3D.lastbuildstate  link.command.1.tlog  link.read.1.tlog
p2/: p2.pbs  readme.txt
p2/src/: heat2D3D.cu  read  read.cc  sample.conf  test.cu
p2_reference/: test.cu
p2_reference/heat2D3D/Debug/: heat2D3D.ilk
p2_reference/heat2D3D/heat2D3D/: 3d_1.conf  3d_1.conf.bak  3d_2.conf  3d_2.conf.bak  heat2D3D.cu  heat2D3D.vcxproj  sample.conf  sample.conf.bak  sample3d.conf
p2_reference/heat2D3D/heat2D3D/Debug/: heat2D3D.cu.deps  kernel.cu.deps
p2_reference/heat2D3D/heat2D3D/Debug/heat2D3D.tlog/: link.write.1.tlog
p2_reference/p2/: CMakeLists.txt
p2_reference/p2/src/: heat2D3D.cu
se3/src/: heat2D3D  heat2D3D.cc
